<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.mixednutz.app.series</groupId>
	<artifactId>mixednutz-app-series</artifactId>
	<version>2.1.25-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>mixednutz-app-series</name>
	<description>Model classes for Series Entityies</description>

	<!-- 
		Using Spring Boot Starter to keep dependencies syncronized across projects
	 -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.14</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	
	<organization>
        <name>Andrew Festa</name>
        <url>http://www.andrewfesta.com</url>
    </organization>
        
    <scm>
		<connection>scm:git:ssh://git@github.com/mixednutz/mixednutz-app-series.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/mixednutz/mixednutz-app-series.git</developerConnection>
		<url>https://github.com/mixednutz/mixednutz-app-series</url>
		<tag>HEAD</tag>
    </scm>
	
	<!-- 
		Deploy JARs to GitHub
	 -->
	<distributionManagement>
	   	<repository>
     			<id>github</id>
     			<name>GitHub MixedNutz Apache Maven Packages</name>
     			<url>https://maven.pkg.github.com/mixednutz/${project.artifactId}</url>
   		</repository>
	</distributionManagement>
	
	<repositories>
		<repository>
			<id>github</id>
        	<name>GitHub Mixednutz Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/mixednutz/mixednutz-java-api</url>
			<releases><enabled>true</enabled></releases>
       		<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<id>github-mixednutz-java-api-core</id>
			<url>https://maven.pkg.github.com/mixednutz/mixednutz-java-api-core</url>
			<releases><enabled>true</enabled></releases>
       		<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<id>github-mixednutz-app-core</id>
			<url>https://maven.pkg.github.com/mixednutz/mixednutz-app-core</url>
			<releases><enabled>true</enabled></releases>
       		<snapshots><enabled>true</enabled></snapshots>
		</repository>
		
		<repository>
	        <id>psiegman-repo</id>
	        <url>https://github.com/psiegman/mvn-repo/raw/master/releases</url>
	    </repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		
		<mixednutz-app.version>2.1.22</mixednutz-app.version> 
		<spring-social.version>1.1.6.RELEASE</spring-social.version>
		<epublib.version>3.1</epublib.version>
		<version.rome>1.8.0</version.rome>
		<version.jsoup>1.15.3</version.jsoup>
	</properties>
	
	<build>
		<plugins>
			<!-- Maven Release Plugin -->
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.4.2</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.8.1</version>
					</dependency>
				</dependencies>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId> 
				<configuration>
					<properties>
	                    <excludeTags>IntegrationTest</excludeTags>
	                </properties>
    			</configuration>
			 </plugin>
			 
			 <plugin>
			 	<groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                	<includes>
				      <include>**/*.java</include>
				    </includes>
                    <properties>
	                    <includeTags>IntegrationTest</includeTags>
	                </properties>
                </configuration>
             </plugin>
	
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
	
		<dependency>
			<groupId>net.mixednutz.app.core</groupId>
			<artifactId>mixednutz-app-core</artifactId>
			<version>${mixednutz-app.version}</version>
			<scope>provided</scope>
		</dependency>
		
		<!--  Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
   			<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-test</artifactId>
    		<scope>test</scope>
		</dependency>
	
		<!-- Jackson Annotations for JSON serialization -->
		<dependency>
		    <groupId>com.fasterxml.jackson.datatype</groupId>
		    <artifactId>jackson-datatype-jsr310</artifactId>
		    <scope>provided</scope>
		</dependency>
		
		<!-- Spring Web for REST client actions -->
		<dependency>
			<groupId>org.springframework</groupId>
		    <artifactId>spring-web</artifactId>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
	        <groupId>org.springframework.social</groupId>
	        <artifactId>spring-social-web</artifactId>
	        <version>${spring-social.version}</version>
	        <scope>provided</scope>
	    </dependency>
		
		<!-- Commons Codec for the Base64 authorization -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<!-- epublib -->
		<dependency>
		    <groupId>nl.siegmann.epublib</groupId>
		    <artifactId>epublib-core</artifactId>
		    <version>${epublib.version}</version>
		    <exclusions>
		    	<exclusion>
		    		<groupId>org.slf4j</groupId>
		    		<artifactId>slf4j-api</artifactId>
		    	</exclusion>
		    	<exclusion>
		    		<groupId>org.slf4j</groupId>
		    		<artifactId>slf4j-simple</artifactId>
		    	</exclusion>
		    </exclusions>
		</dependency>
		
		<!-- ROME -->
	    <dependency>
		    <groupId>com.rometools</groupId>
		    <artifactId>rome</artifactId>
		    <version>${version.rome}</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>${version.jsoup}</version>
		</dependency>
		
		<!-- Testing -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<scope>test</scope>
		</dependency>
		
	</dependencies>
	

</project>
